# AiWebSockets

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  DEBUG_QUICKSTART.md  PROJECT_GROWTH.md  README.md  WINDSURF_BUILD_SETUP.md  compile_commands.json  debug_codelldb.md  debug_lldb.txt  debug_powershell.txt  debug_vs_steps.txt  debug_windbg.txt  debug_windows.txt  msbuild-time.txt  ninja-time.txt  performance_comparison.md
build-debug/: ALL_BUILD.vcxproj  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aiWebSockets.sln  aiWebSockets.vcxproj  aiWebSockets.vcxproj.filters  aiWebSocketsServer.vcxproj  aiWebSocketsServer.vcxproj.filters  aiWebSocketsTests.vcxproj  aiWebSocketsTests.vcxproj.filters  event_loop_test.vcxproj  event_loop_test.vcxproj.filters  large_data_test.vcxproj  large_data_test.vcxproj.filters  performance_test.vcxproj  performance_test.vcxproj.filters  server_to_client_test.vcxproj  server_to_client_test.vcxproj.filters  socket_test.vcxproj  socket_test.vcxproj.filters
build-debug-commands/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aiWebSockets.sln  aiWebSockets.vcxproj  aiWebSockets.vcxproj.filters  aiWebSocketsServer.vcxproj  aiWebSocketsServer.vcxproj.filters  aiWebSocketsTests.vcxproj  aiWebSocketsTests.vcxproj.filters  event_loop_test.vcxproj  event_loop_test.vcxproj.filters  large_data_test.vcxproj  large_data_test.vcxproj.filters  performance_test.vcxproj  performance_test.vcxproj.filters  server_to_client_test.vcxproj  server_to_client_test.vcxproj.filters  socket_test.vcxproj  socket_test.vcxproj.filters
build-release/: .ninja_deps  .ninja_log
build-vs/: ALL_BUILD.vcxproj  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  aiWebSockets.sln  aiWebSockets.vcxproj  aiWebSockets.vcxproj.filters  aiWebSocketsServer.vcxproj  aiWebSocketsServer.vcxproj.filters  aiWebSocketsTests.vcxproj  aiWebSocketsTests.vcxproj.filters  async_performance_test.vcxproj  async_performance_test.vcxproj.filters  comprehensive_http_test.vcxproj  comprehensive_http_test.vcxproj.filters  debug_security_test.vcxproj  debug_security_test.vcxproj.filters  enhanced_handshake_test.vcxproj  enhanced_handshake_test.vcxproj.filters  enhanced_security_test.vcxproj  enhanced_security_test.vcxproj.filters  event_loop_test.vcxproj  event_loop_test.vcxproj.filters  http_client.vcxproj  http_client.vcxproj.filters  http_compliance_test.vcxproj  http_compliance_test.vcxproj.filters  http_security_test.vcxproj  http_security_test.vcxproj.filters  hybrid_server.vcxproj  hybrid_server.vcxproj.filters  large_data_test.vcxproj  large_data_test.vcxproj.filters  nonblocking_hybrid_server.vcxproj  nonblocking_hybrid_server.vcxproj.filters  performance_test.vcxproj  performance_test.vcxproj.filters  security_test.vcxproj  security_test.vcxproj.filters  sequential_server.vcxproj  sequential_server.vcxproj.filters  (+14 more)
examples/: BOILERPLATE_REPLACEMENT_SUMMARY.md  BasicHttpClientTest.cpp  COMPILATION_FIXES_SUMMARY.md  HttpClientTest.cpp  IPV6_SUPPORT_SUMMARY.md  LOCAL_IP_ENUMERATION_GUIDE.md  MULTI_INTERFACE_SERVER_GUIDE.md  PROXY_AWARE_IP_DETECTION.md  README_Lite_API.md  SOCKET_ADDRESS_CAPABILITIES.md  SimpleHttpClientTest.cpp  async_direct_test.cpp  async_http_performance_test.cpp  async_performance_test.cpp  async_simple_test.cpp  boilerplate_free_test.cpp  clean_async_test.cpp  client.html  comprehensive_http_test.cpp  debug_nmap_test.cpp  debug_security_test.cpp  enhanced_handshake_test.cpp  enhanced_security_test.cpp  event_loop_test.cpp  http_client.cpp  http_compliance_test.cpp  http_compliance_test_fixed.cpp  http_performance_test.cpp  http_security_test.cpp  http_websocket_hybrid.cpp  http_websocket_server.cpp  hybrid_server.cpp  ipv6_localhost_test.cpp  ipv6_test.cpp  keepalive_performance_test.cpp  large_data_test.cpp  local_ip_enumeration.cpp  minimal_example.cpp  multi_interface_server.cpp  nonblocking_hybrid_server.cpp  (+27 more)
include/WebSocket/: AddrInfo.h  AddrInfoGuard.h  ErrorCodes.h  HttpClient.h  HttpWsServer.h  OS.h  PCH.h  Socket.h  SocketBase.h  TestUtilities.h  Types.h  WebSocketClientLite.h  WebSocketProtocol.h  WebSocketServer.h  WebSocketServerLite.h
scripts/: README.md  build-and-commit-simple.bat  build-and-commit.bat  build-and-commit.ps1  build-and-commit.sh  build-clean.bat  build-posix.sh  build-vs2022.bat  build-vs2026.bat  build-with-ninja.bat  build-with-pch.bat  calculate-improvement.ps1  generate-compile-commands.bat  ninja-performance-summary.ps1  timed-build-msbuild.bat  timed-build-ninja-vs.bat  timed-build-ninja.bat
src/: AddrInfo.cpp  ErrorCodes.cpp  HttpClient.cpp  HttpWsServer.cpp  Socket.cpp  SocketBase.cpp  WebSocketClientLite.cpp  WebSocketProtocol.cpp  WebSocketServer.cpp  WebSocketServerLite.cpp
tests/: CompilerFirewallCheck.cpp  HttpClientTest.cpp  SocketTests.cpp  WebSocketProtocolTests.cpp  WebSocketServerTests.cpp  main.cpp
